Add option to run in %D not entire root dir

--- a/.gitignore
+++ b/.gitignore
@@ -194,6 +194,6 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python
 
-testEnv/
+testEnv*/
 testData/
 config.ini
