Dev container refactor

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,20 +3,32 @@
 
 FROM mcr.microsoft.com/devcontainers/base:ubuntu-24.04
 
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
+RUN set -e; \
+    apt-get update; \
+    apt-get install -y --no-install-recommends \
+    ca-certificates \
+    curl \
     ffmpeg \
-    nodejs \
+    gnupg \
     openjdk-25-jre-headless \
     pciutils \
     python-is-python3 \
     python3 \
     python3-pip \
-    python3-venv
-
-# --- GPU/NPU support (runtime detection) ---
-# Detect and enable all available GPU/NPU options: NVIDIA, Intel, AMD, Qualcomm (Adreno/Hexagon NPU)
-RUN set -e; \
+    python3-venv; \
+    \
+    # SonarQube for VS Code requires Node.js >= 20.12 for JSON analysis.
+    mkdir -p /etc/apt/keyrings; \
+    curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg; \
+    echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_20.x nodistro main" > /etc/apt/sources.list.d/nodesource.list; \
+    apt-get update; \
+    apt-get install -y --no-install-recommends nodejs; \
+    node -v; \
+    npm -v; \
+    \
+    # --- GPU/NPU support (runtime detection) ---
+    # Detect and enable all available GPU/NPU options: NVIDIA, Intel, AMD, Qualcomm (Adreno/Hexagon NPU)
+    \
     # NVIDIA GPU support (if present, requires host runtime)
     if lspci | grep -i nvidia; then \
     apt-get update && apt-get install -y --no-install-recommends \
@@ -25,6 +37,7 @@ RUN set -e; \
     else \
     echo 'No NVIDIA GPU detected.'; \
     fi; \
+    \
     # Intel GPU support (if present)
     if lspci | grep -i 'VGA.*Intel'; then \
     apt-get update && apt-get install -y --no-install-recommends \
@@ -33,6 +46,7 @@ RUN set -e; \
     else \
     echo 'No Intel GPU detected.'; \
     fi; \
+    \
     # AMD GPU support (if present)
     if lspci | grep -i 'VGA.*AMD\|VGA.*ATI'; then \
     apt-get update && apt-get install -y --no-install-recommends \
@@ -41,6 +55,7 @@ RUN set -e; \
     else \
     echo 'No AMD GPU detected.'; \
     fi; \
+    \
     # Qualcomm Adreno GPU/Hexagon NPU support (if present)
     if lscpu | grep -qi 'qualcomm'; then \
     echo 'Qualcomm ARM CPU detected.'; \
@@ -57,12 +72,15 @@ RUN set -e; \
     else \
     echo 'No Qualcomm ARM CPU detected.'; \
     fi; \
+    \
     # Generic NPU/AI accelerator stub (customize for your hardware)
     if lspci | grep -i 'neural\|npu'; then \
     echo 'NPU detected. Please install your NPU drivers here.'; \
     else \
     echo 'No NPU detected.'; \
-    fi
-
-# Clean up
-RUN apt-get autoremove -y && apt-get clean && rm -rf /var/lib/apt/lists/*
+    fi; \
+    \
+    # Clean up
+    apt-get autoremove -y; \
+    apt-get clean; \
+    rm -rf /var/lib/apt/lists/*
